hphp/hack/test/typecheck/reactive/print_in_rx3.php
<?hh // strict
<<__RxShallow>>
function f()[rx_shallow]: void {
  // should be error
  print 1;
}
